--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.security.user.password=${ADMIN_PASSWORD:admin}
 server.forward-headers-strategy=framework
 server.servlet.session.cookie.same-site=None
 server.servlet.session.cookie.secure=true
+jwt.secret=changeitchangeitchangeitchangeithfdsyktcjktrytxc
+jwt.expirationMs=36000000
+
+
