--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,6 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-
-
 ### STS ###
 .apt_generated
 .classpath
@@ -14,6 +12,9 @@ target/
 .settings
 .springBeans
 .sts4-cache
+
+# env
+.env
 
 ### IntelliJ IDEA ###
 .idea
