--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,12 @@
 DB_NAME=splitwise_v2
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
+# url format is: jdbc:postgresql://<host>:<port>/<database_name>
 # When running in Docker, use the DB service hostname 'db'
-# DB_URL=jdbc:postgresql://db:5432/${DB_NAME}
-DB_URL=jdbc:postgresql://localhost:5432/${DB_NAME}
+# DB_URL=jdbc:postgresql://db:5432/splitwise_v2
+DB_URL=jdbc:postgresql://localhost:5432/splitwise_v2
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
 FRONTEND_URL=http://localhost:3000
+JWT_SECRET=your-secret-key-should-be-at-least-256-bits-long-change-this-in-production
+JWT_EXPIRY=3600000
