--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,38 @@
 
-#-----------------------------------------
-#server.address=0.0.0.0
-#server.port=${SERVER_PORT:8080}
-#spring.application.name=SplitEase
-#spring.datasource.url=${DB_URL}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
-#spring.jpa.show-sql=true
-#
-#app.frontend.url=${FRONTEND_URL:https://spliteaseapp.atul.codes}
-#
-#spring.security.user.name=${ADMIN_USERNAME:admin}
-#spring.security.user.password=${ADMIN_PASSWORD:admin}
-#
-#server.forward-headers-strategy=framework
-#server.servlet.session.cookie.same-site=None
-#server.servlet.session.cookie.secure=true
+server.address=0.0.0.0
+server.port=${SERVER_PORT:8080}
+spring.application.name=SplitEase
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/splitwise_v2}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:update}
+spring.jpa.show-sql=true
+
+app.frontend.url=${FRONTEND_URL:http://localhost:3000}
+app.backend.url=${BACKEND_URL:http://localhost:8080}
+
+spring.security.user.name=${ADMIN_USERNAME:admin}
+spring.security.user.password=${ADMIN_PASSWORD:admin}
+
+jwt.secret=${JWT_SECRET:your-secret-key-should-be-at-least-256-bits-long-change-this-in-production}
+jwt.expirationMs=${JWT_EXPIRY:3600000}
+
+# Mail Configuration (optional - configure for email features)
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME:dummy@example.com}
+spring.mail.password=${MAIL_PASSWORD:dummy}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+app.mail.from=${MAIL_FROM:noreply@splitease.com}
+app.mail.from-name=${MAIL_FROM_NAME:SplitEase}
+
+server.forward-headers-strategy=framework
+server.servlet.session.cookie.same-site=None
+server.servlet.session.cookie.secure=true
 
 
 
