--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.address=0.0.0.0
 server.port=${SERVER_PORT:8080}
 spring.application.name=SplitEase
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/splitwise_v2}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
